@@ -1,97 +1,106 @@
 /*
- * Copyright (c) 2023, RTE (http://www.rte-france.com)
+ * Copyright (c) 2024, RTE (http://www.rte-france.com)
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
 package com.powsybl.openrao.data.craccreation.creator.csaprofile.craccreator.remedialaction;
 
-import com.powsybl.openrao.commons.OpenRaoException;
-import com.powsybl.openrao.data.craccreation.creator.csaprofile.craccreator.CsaProfileConstants;
+import com.powsybl.contingency.Contingency;
+import com.powsybl.openrao.data.cracapi.Crac;
+import com.powsybl.openrao.data.cracapi.cnec.Cnec;
 import com.powsybl.openrao.data.craccreation.creator.csaprofile.craccreator.CsaProfileElementaryCreationContext;
-import com.powsybl.triplestore.api.PropertyBag;
-import com.powsybl.triplestore.api.PropertyBags;
+import com.powsybl.openrao.data.craccreation.creator.csaprofile.craccreator.constants.ElementCombinationConstraintKind;
+import com.powsybl.openrao.data.craccreation.creator.csaprofile.nc.AssessedElement;
+import com.powsybl.openrao.data.craccreation.creator.csaprofile.nc.AssessedElementWithRemedialAction;
+import com.powsybl.openrao.data.craccreation.creator.csaprofile.nc.ContingencyWithRemedialAction;
 
-import java.util.*;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
  * @author Mohamed Ben-rejeb {@literal <mohamed.ben-rejeb at rte-france.com>}
+ * @author Thomas Bouquet <thomas.bouquet at rte-france.com>
  */
-public class OnConstraintUsageRuleHelper {
-    private final Set<CsaProfileElementaryCreationContext> csaProfileCnecCreationContexts;
+public final class OnConstraintUsageRuleHelper {
 
-    private final Set<String> importedCnecsCombinableWithRas = new HashSet<>();
-    private final Map<String, Set<String>> excludedCnecsByRemedialAction = new HashMap<>();
-    private final Map<String, Set<String>> includedCnecsByRemedialAction = new HashMap<>();
-    private final Map<String, Set<String>> consideredCnecsByRemedialAction = new HashMap<>();
-
-    public OnConstraintUsageRuleHelper(Set<CsaProfileElementaryCreationContext> csaProfileCnecCreationContexts, PropertyBags assessedElements, PropertyBags assessedElementsWithRemedialAction) {
-        this.csaProfileCnecCreationContexts = csaProfileCnecCreationContexts;
-        readAssessedElementsCombinableWithRemedialActions(assessedElements);
-        readAssessedElementsWithRemedialAction(assessedElementsWithRemedialAction);
+    private OnConstraintUsageRuleHelper() {
     }
 
-    private void readAssessedElementsCombinableWithRemedialActions(PropertyBags assessedElements) {
-        List<String> nativeIdsOfCnecsCombinableWithRas = assessedElements.stream()
-            .filter(element -> element.getId(CsaProfileConstants.REQUEST_ASSESSED_ELEMENT_IS_COMBINABLE_WITH_REMEDIAL_ACTION) != null && Boolean.parseBoolean(element.getId(CsaProfileConstants.REQUEST_ASSESSED_ELEMENT_IS_COMBINABLE_WITH_REMEDIAL_ACTION)))
-            .map(element -> element.getId(CsaProfileConstants.REQUEST_ASSESSED_ELEMENT)).toList();
-        Map<String, Set<String>> nativeToOpenRaoCnecIdsCombinableWithRas = getImportedCnecsNativeIdsToOpenRaoIds();
-        nativeToOpenRaoCnecIdsCombinableWithRas.keySet().retainAll(nativeIdsOfCnecsCombinableWithRas);
-        nativeToOpenRaoCnecIdsCombinableWithRas.values().stream().flatMap(Set::stream).forEach(importedCnecsCombinableWithRas::add);
+    public static Set<Cnec> getImportedCnecFromAssessedElementId(String assessedElementId, Crac crac, Set<CsaProfileElementaryCreationContext> cnecCreationContexts) {
+        return cnecCreationContexts.stream().filter(context -> context.isImported() && assessedElementId.equals(context.getNativeId())).map(context -> crac.getCnec(context.getElementId())).collect(Collectors.toSet());
     }
 
-    private void readAssessedElementsWithRemedialAction(PropertyBags assessedElementsWithRemedialAction) {
-        assessedElementsWithRemedialAction.stream().filter(this::checkNormalEnabled).filter(propertyBag -> getImportedCnecsNativeIdsToOpenRaoIds().containsKey(propertyBag.getId(CsaProfileConstants.REQUEST_ASSESSED_ELEMENT))).forEach(propertyBag -> {
-            String combinationConstraintKind = propertyBag.get(CsaProfileConstants.COMBINATION_CONSTRAINT_KIND);
-            String remedialActionId = propertyBag.getId(CsaProfileConstants.REQUEST_REMEDIAL_ACTION);
-            String assessedElementId = propertyBag.getId(CsaProfileConstants.REQUEST_ASSESSED_ELEMENT);
+    public static Set<Cnec> getCnecsBuiltFromAssessedElementsCombinableWithRemedialActions(Crac crac, Set<CsaProfileElementaryCreationContext> cnecCreationContexts, Set<AssessedElement> nativeAssessedElements) {
+        Set<Cnec> cnecsCombinableWithRemedialActions = new HashSet<>();
+        nativeAssessedElements.stream().filter(AssessedElement::isCombinableWithRemedialAction).forEach(nativeAssessedElement -> cnecsCombinableWithRemedialActions.addAll(getImportedCnecFromAssessedElementId(nativeAssessedElement.mrid(), crac, cnecCreationContexts)));
+        return cnecsCombinableWithRemedialActions;
+    }
 
-            Set<String> openRaoCnecIds = getImportedCnecsNativeIdsToOpenRaoIds().get(assessedElementId);
+    public static Set<Cnec> filterCnecsThatHaveGivenContingencies(Set<Cnec> cnecs, Set<String> contingenciesIds) {
+        return cnecs.stream().filter(cnec -> cnec.getState().getContingency().isPresent() && contingenciesIds.contains(cnec.getState().getContingency().get().getId())).collect(Collectors.toSet());
+    }
 
-            if (combinationConstraintKind.equals(CsaProfileConstants.ElementCombinationConstraintKind.EXCLUDED.toString())) {
-                excludedCnecsByRemedialAction
-                    .computeIfAbsent(remedialActionId, k -> new HashSet<>())
-                    .addAll(openRaoCnecIds);
-            } else if (combinationConstraintKind.equals(CsaProfileConstants.ElementCombinationConstraintKind.INCLUDED.toString())) {
-                includedCnecsByRemedialAction
-                    .computeIfAbsent(remedialActionId, k -> new HashSet<>())
-                    .addAll(openRaoCnecIds);
-            } else if (combinationConstraintKind.equals(CsaProfileConstants.ElementCombinationConstraintKind.CONSIDERED.toString())) {
-                consideredCnecsByRemedialAction
-                    .computeIfAbsent(remedialActionId, k -> new HashSet<>())
-                    .addAll(openRaoCnecIds);
-            } else {
-                throw new OpenRaoException(String.format("Unsupported combinationConstraintKind of AssessedElementsWithRemedialAction with id %s, only  ['INCLUDED', 'EXCLUDED', 'CONSIDERED'] are supported ", propertyBag.get(CsaProfileConstants.REQUEST_ASSESSED_ELEMENT_WITH_REMEDIAL_ACTION)));
+    public static Map<String, AssociationStatus> processCnecsLinkedToRemedialAction(Crac crac, String remedialActionId, Set<AssessedElement> nativeAssessedElements, Set<AssessedElementWithRemedialAction> linkedAssessedElementWithRemedialActions, Set<ContingencyWithRemedialAction> linkedContingencyWithRemedialActions, Set<CsaProfileElementaryCreationContext> cnecCreationContexts) {
+        Map<String, AssociationStatus> contingencyStatusMap = OnContingencyStateUsageRuleHelper.processContingenciesLinkedToRemedialAction(crac, remedialActionId, linkedContingencyWithRemedialActions);
+        Map<String, AssociationStatus> cnecStatusMap = new HashMap<>();
+        Set<Cnec> cnecsCombinableWithRemedialAction = getCnecsBuiltFromAssessedElementsCombinableWithRemedialActions(crac, cnecCreationContexts, nativeAssessedElements);
+        Map<String, ElementCombinationConstraintKind> validContingenciesUsageRules = contingencyStatusMap.entrySet().stream().filter(entry -> entry.getValue().isValid()).collect(Collectors.toMap(Map.Entry::getKey, entry -> entry.getValue().elementCombinationConstraintKind()));
+
+        for (AssessedElementWithRemedialAction nativeAssessedElementWithRemedialAction : linkedAssessedElementWithRemedialActions) {
+            Set<Cnec> cnecs = contingencyStatusMap.isEmpty() ? getImportedCnecFromAssessedElementId(nativeAssessedElementWithRemedialAction.assessedElement(), crac, cnecCreationContexts) : filterCnecsThatHaveGivenContingencies(getImportedCnecFromAssessedElementId(nativeAssessedElementWithRemedialAction.assessedElement(), crac, cnecCreationContexts), validContingenciesUsageRules.keySet());
+
+            if (cnecStatusMap.containsKey(nativeAssessedElementWithRemedialAction.assessedElement()) || cnecs.stream().anyMatch(cnec -> cnecStatusMap.containsKey(cnec.getId()))) {
+                cnecStatusMap.put(nativeAssessedElementWithRemedialAction.assessedElement(), new AssociationStatus(false, null, "OnConstraint usage rule for remedial action %s with assessed element %s ignored because this assessed element has several conflictual links to the remedial action.".formatted(remedialActionId, nativeAssessedElementWithRemedialAction.assessedElement())));
+                cnecs.stream().map(Cnec::getId).forEach(cnecStatusMap::remove);
+                continue;
             }
-        });
-    }
 
-    private boolean checkNormalEnabled(PropertyBag propertyBag) {
-        Optional<String> normalEnabledOpt = Optional.ofNullable(propertyBag.get(CsaProfileConstants.NORMAL_ENABLED));
-        return normalEnabledOpt.isEmpty() || Boolean.parseBoolean(normalEnabledOpt.get());
-    }
+            cnecsCombinableWithRemedialAction.removeAll(cnecs);
 
-    private Map<String, Set<String>> getImportedCnecsNativeIdsToOpenRaoIds() {
-        return csaProfileCnecCreationContexts.stream()
-            .filter(CsaProfileElementaryCreationContext::isImported)
-            .collect(Collectors.groupingBy(
-                CsaProfileElementaryCreationContext::getNativeId,
-                Collectors.mapping(CsaProfileElementaryCreationContext::getElementId, Collectors.toSet())
-            ));
-    }
+            if (cnecs.isEmpty()) {
+                cnecStatusMap.put(nativeAssessedElementWithRemedialAction.assessedElement(), new AssociationStatus(false, null, "OnConstraint usage rule for remedial action %s with assessed element %s ignored because no CNEC was imported by Open RAO from this assessed element.".formatted(remedialActionId, nativeAssessedElementWithRemedialAction.assessedElement())));
+                continue;
+            }
 
-    public Set<String> getImportedCnecsCombinableWithRas() {
-        return importedCnecsCombinableWithRas;
-    }
+            if (!nativeAssessedElementWithRemedialAction.normalEnabled()) {
+                cnecStatusMap.put(nativeAssessedElementWithRemedialAction.assessedElement(), new AssociationStatus(false, null, "OnConstraint usage rule for remedial action %s with assessed element %s ignored because the association is disabled.".formatted(remedialActionId, nativeAssessedElementWithRemedialAction.assessedElement())));
+                continue;
+            }
 
-    public Map<String, Set<String>> getExcludedCnecsByRemedialAction() {
-        return this.excludedCnecsByRemedialAction;
-    }
+            if (!ElementCombinationConstraintKind.INCLUDED.toString().equals(nativeAssessedElementWithRemedialAction.combinationConstraintKind()) && !ElementCombinationConstraintKind.CONSIDERED.toString().equals(nativeAssessedElementWithRemedialAction.combinationConstraintKind())) {
+                cnecStatusMap.put(nativeAssessedElementWithRemedialAction.assessedElement(), new AssociationStatus(false, null, "OnConstraint usage rule for remedial action %s with assessed element %s ignored because of an illegal combinationConstraintKind.".formatted(remedialActionId, nativeAssessedElementWithRemedialAction.assessedElement())));
+                continue;
+            }
 
-    public Map<String, Set<String>> getConsideredAndIncludedCnecsByRemedialAction() {
-        Map<String, Set<String>> result = new HashMap<>(this.includedCnecsByRemedialAction);
-        result.putAll(consideredCnecsByRemedialAction);
-        return result;
+            ElementCombinationConstraintKind combinationConstraintKind = ElementCombinationConstraintKind.INCLUDED.toString().equals(nativeAssessedElementWithRemedialAction.combinationConstraintKind()) ? ElementCombinationConstraintKind.INCLUDED : ElementCombinationConstraintKind.CONSIDERED;
+
+            cnecs.forEach(
+                cnec -> {
+                    if (cnec.getState().getContingency().isPresent()) {
+                        Contingency contingency = cnec.getState().getContingency().get();
+                        if (validContingenciesUsageRules.containsKey(contingency.getId()) && combinationConstraintKind != validContingenciesUsageRules.get(contingency.getId())) {
+                            cnecStatusMap.put(cnec.getId(), new AssociationStatus(false, null, "OnConstraint usage rule for remedial action %s with CNEC %s ignored because the combinationConstraintKinds between of the AssessedElementWithRemedialAction for assessed element %s and the ContingencyWithRemedialAction for contingency %s are different.".formatted(remedialActionId, cnec.getId(), nativeAssessedElementWithRemedialAction.assessedElement(), contingency.getId())));
+                            return;
+                        }
+                    }
+                    cnecStatusMap.put(cnec.getId(), new AssociationStatus(true, combinationConstraintKind, ""));
+                }
+            );
+        }
+
+        // Add CNECs built from AssessedElements which are combinable with remedial actions
+        if (contingencyStatusMap.isEmpty()) {
+            // The remedial action is not associated to contingencies
+            cnecsCombinableWithRemedialAction.forEach(cnec -> cnecStatusMap.put(cnec.getId(), new AssociationStatus(true, ElementCombinationConstraintKind.CONSIDERED, "")));
+        } else {
+            // The remedial action is associated to contingencies (valid or not)
+            filterCnecsThatHaveGivenContingencies(cnecsCombinableWithRemedialAction, validContingenciesUsageRules.keySet()).forEach(cnec -> cnecStatusMap.put(cnec.getId(), new AssociationStatus(true, validContingenciesUsageRules.get(cnec.getState().getContingency().orElseThrow().getId()), "")));
+        }
+
+        return cnecStatusMap;
     }
 }
